Added divs for display: block

--- a/index.html
+++ b/index.html
@@ -28,9 +28,17 @@
         <form>
           <h2>New Entry</h2>
           <img src="" />
-          <label for="title">Title<input id="title" name="title" /></label>
-          <label for="photo">Photo Url<input id="photo" name="photo" /></label>
-          <label for="notes">Notes<input id="notes" name="notes" /></label>
+          <div>
+            <label for="title">Title<input id="title" name="title" /></label>
+          </div>
+          <div>
+            <label for="photo"
+              >Photo Url<input id="photo" name="photo"
+            /></label>
+          </div>
+          <div>
+            <label for="notes">Notes<input id="notes" name="notes" /></label>
+          </div>
           <input type="submit" />
         </form>
       </div>
