Added div to house img

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       <div data-view="entry-form">
         <form>
           <h2>New Entry</h2>
-          <img src="" />
+          <div>
+            <img src="" />
+          </div>
           <div>
             <label for="title">Title<input id="title" name="title" /></label>
           </div>
