Made all inputs required
I thought I fixed a whitespace bug with a CSS class. I didn't. I switched textarea back to being a column-full and touched its opening-tag-closing-caret to the closing-tag-opening-caret. This actually gets rid of the whitespace, letting it be functionally required.

--- a/index.html
+++ b/index.html
@@ -39,16 +39,29 @@
             </div>
             <div class="column-half">
               <label for="title"
-                >Title<input class="column-full" id="title" name="title"
+                >Title<input
+                  class="column-full"
+                  id="title"
+                  name="title"
+                  required
               /></label>
               <label for="photo"
-                >Photo URL<input class="column-full" id="photo" name="photo"
+                >Photo URL<input
+                  class="column-full"
+                  id="photo"
+                  name="photo"
+                  required
               /></label>
             </div>
           </div>
           <div class="column-full">
             <label for="notes"
-              >Notes<textarea rows="5" id="notes" name="notes"> </textarea>
+              >Notes<textarea
+                class="column-full"
+                rows="5"
+                id="notes"
+                name="notes"
+                required></textarea>
             </label>
           </div>
           <div class="column-full row right">
