Added CSS for user interaction
Input/textarea border now changes on focus; input now changes background color once it fires of input events; also added a reset for input background colors when the user resets the form.

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
             <div class="column-half">
               <label for="title"
                 >Title<input
-                  class="column-full"
+                  class="column-full input"
                   id="title"
                   name="title"
                   required
               /></label>
               <label for="photo"
                 >Photo URL<input
-                  class="column-full"
+                  class="column-full input"
                   id="photo"
                   name="photo"
                   required
@@ -57,7 +57,7 @@
           <div class="column-full">
             <label for="notes"
               >Notes<textarea
-                class="column-full"
+                class="column-full input"
                 rows="5"
                 id="notes"
                 name="notes"
