--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
     </header>
     <main class="container">
-      <div data-view="entry-form">
+      <div data-view="entry-form" class="hidden">
         <form>
           <div class="column-full">
             <h1>New Entry</h1>
