Added functionality to 'NEW' button #2
Also threw the top elements in the entries view (the title and the button) into a column so they'd have the padding they ought to

--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@
         </form>
       </div>
       <div data-view="entries" class="hidden">
-        <div class="row space-between align-items-center">
-          <h1>Entries</h1>
-          <a class="submit white-on-purple pseudo-button submit">NEW</a>
+        <div class="column-full">
+          <div class="row space-between align-items-center">
+            <h1>Entries</h1>
+            <a class="submit white-on-purple" id="new-button">NEW</a>
+          </div>
         </div>
         <ul id="ul-for-entries">
           <li class="centered-text no-entries">
