--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div data-view="entry-form" class="hidden">
         <form>
           <div class="column-full">
-            <h1>New Entry</h1>
+            <h1 id="entry-form-title">New Entry</h1>
           </div>
           <div class="row">
             <div class="column-half">
